# template_api_rust

./: .env  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  response.rs
