[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
derive_more = "0.99"
log = "0.4" 
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] } 
webbrowser = "0.8"  